--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "vue-barcode-input",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": false,
+  "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "keywords": [
-    "vuejs",
-    "vue",
-    "3",
-    "scanner",
-    "barcode",
-    "input",
-    "design"
-  ],
-  "author": "Matus Stafura",
-  "license": "MIT"
+  "dependencies": {
+    "vue": "^3.2.25"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^2.2.0",
+    "vite": "^2.8.0"
+  }
 }
