--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "vue-barcode-input",
+  "description": "desf",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/matusstafura/vue-barcode-input"
+  },
+  "keywords": [
+    "barcode",
+    "scanner",
+    "input",
+    "vuejs",
+    "vue"
+  ],
+  "author": "Matus Stafura",
+  "license": "MIT",
   "private": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
+  "main": "./src/main.js",
   "dependencies": {
     "vue": "^3.2.25"
   },
