--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   },
   "main": "./src/main.js",
   "dependencies": {
+    "@vue/cli-service": "^5.0.1",
+    "core-js": "^3.8.3",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-unit-jest": "~5.0.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
