--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-barcode-input",
-  "version": "0.0.4",
+  "version": "0.1.0",
   "private": false,
-  "description": "in development - Trivial Form for Barcode Scanner for further dev",
+  "description": "in development - Form for Barcode Scanner for further dev",
   "author": "Matus Stafura",
   "scripts": {
     "build": "vite build",
